# wordle-solver

./: Cargo.toml  generateArray.js  generateDictRs.js  package.json
crates/dictionary/: Cargo.toml
crates/dictionary/src/: dict.rs  lib.rs
crates/logic/: Cargo.toml
crates/logic/src/: lib.rs
crates/solver_lib/: Cargo.toml
crates/solver_lib/src/: lib.rs
