[package]
edition = "2021"
name = "solver_lib"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common_macros = "0.1.1"
dictionary = {path = "../dictionary"}
logic = {path = "../logic"}
once_cell = "1.12.0"
parking_lot = "0.12.1"
rayon = "1.5.3"
